--- a/style.css
+++ b/style.css
@@ -197,3 +197,40 @@ body{
  height: 480px;
  width: 640px;
 }
+
+
+
+/*  On screens with a maximum window width of 1280px 
+@media screen and (max-width: 1280px)
+ On all screen types with a window width of between 1024px and 1280px 
+@media all and (min-width: 1024px) and (max-width: 1280px)
+On TVs 
+@media tv
+ On all vertically oriented types of screens 
+@media all and (orientation: portrait) 
+*/
+
+@media screen and (max-width: 768px){
+    .go-to-gallery-btn {
+        background: #eeeeee;
+        padding-top: 4vh;
+        border-radius: 50%;
+        border: 1px solid red;
+        height: 5rem;
+        width: 5rem;
+        position: absolute;
+        bottom: 88vh;
+        right: 1vh;
+        color: currentcolor;
+        font-weight: 900;
+        text-align: center;
+    }
+
+    .galleryImg {
+        left: 15px;
+        position: absolute;
+        height: 3rem;
+        width: 3rem;
+        bottom: 8px;
+    }
+}
